Added additional runtime and compile-time options in SgineProject. Tweaked Updatable to no longer create garbage. Reduce garbage creation from Transaction.